# sinatra-review-service

./: .env  Cargo.toml  dev.http  rustfmt.toml
src/: main.rs  model.rs
src/routes/: hello_world.rs  mod.rs
static/: 404.html
