[package]
edition = "2021"
name = "sinatra-review-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
dotenv = "0.15.0"
log = "0.4.14"
serde = {version = "1.0.130", features = ["derive"]}
tokio = {version = "1.13.0", features = ["full"]}
