[package]
edition = "2021"
name = "sinatra-review-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
dotenv = "0.15.0"
futures = "0.3"
log = "0.4.14"
mongodb = "2.3.1"
serde = {version = "1.0.152", features = ["derive"]}
tokio = {version = "1.13.0", features = ["full"]}
tower-http = {version = "0.3.5", features = ["full"]}
